--- a/FUNDAHOG/www/index.html
+++ b/FUNDAHOG/www/index.html
@@ -1,47 +1,61 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
-        <!--
-        Customize this policy to fit your own app's needs. For more guidance, see:
-            https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-        Some notes:
-            * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-            * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-            * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-                * Enable inline JS: add 'unsafe-inline' to default-src
-        -->
 
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta  charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <title>FUNDAHOG</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
+        <div class="row" style="background-color: #cde1ea; padding-left: 2%; padding-top: 2px; color: #ff1c8e; font-weight: normal; font-size: 28px;">
+            <a id="side" onclick="show();"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a>
+            <img src="img/manos_icon.png" style="height: 3%; width: 3%;"/>
+            FUNDAHOG
+            
+            <!--<h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
             </div>
+            -->
         </div>
+        <div id="barraLateral" class="row" style="display: none;">
+            <div class="col-md-3 sidebar">
+                <ul class="nav nav-sidebar navbar-inverse">
+                <li class="active">
+                    <a href="#" style="font-size: 15px;">
+                        <span class=" glyphicon glyphicon-user" aria-hidden="true"></span>
+                        Perfil 
+                    </a>
+                </li>
+                <li>
+                    <a href="#" style="font-size: 15px;">
+                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        Médico 
+                    </a>
+                </li>
+                <li>
+                    <br><br>
+                </li>
+                <li>
+                    <a href="#" style="font-size: 15px;">
+                        <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+                        Iniciar Sesión 
+                    </a>
+                </li>
+                <li style="display: none;">
+                    <a href="#" style="font-size: 15px;">
+                        <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+                        Cerrar Sesión 
+                    </a>
+                </li>
+                </ul>
+            </div>
+        </div>    
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
     </body>
 </html>
