--- a/FUNDAHOG/www/index.html
+++ b/FUNDAHOG/www/index.html
@@ -8,9 +8,9 @@
         <title>FUNDAHOG</title>
     </head>
     <body>
-        <div class="row" style="background-color: #cde1ea; padding-left: 2%; padding-top: 2px; color: #ff1c8e; font-weight: normal; font-size: 28px;">
+        <div class="row col-lg-12 col-md-12 col-sm-12 col-xs-12" style="background-color: #cde1ea; padding-left: 5%; padding-top: 2px; color: #ff1c8e; font-weight: normal; font-size: 28px;">
             <a id="side" onclick="show();"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a>
-            <img src="img/manos_icon.png" style="height: 3%; width: 3%;"/>
+            <img src="img/manos_icon.png" style="height: 50px; width: 50px;"/>
             FUNDAHOG
             
             <!--<h1>Apache Cordova</h1>
@@ -20,38 +20,78 @@
             </div>
             -->
         </div>
-        <div id="barraLateral" class="row" style="display: none;">
-            <div class="col-md-3 sidebar">
-                <ul class="nav nav-sidebar navbar-inverse">
-                <li class="active">
-                    <a href="#" style="font-size: 15px;">
-                        <span class=" glyphicon glyphicon-user" aria-hidden="true"></span>
-                        Perfil 
-                    </a>
-                </li>
-                <li>
-                    <a href="#" style="font-size: 15px;">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                        Médico 
-                    </a>
-                </li>
-                <li>
-                    <br><br>
-                </li>
-                <li>
-                    <a href="#" style="font-size: 15px;">
-                        <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
-                        Iniciar Sesión 
-                    </a>
-                </li>
-                <li style="display: none;">
-                    <a href="#" style="font-size: 15px;">
-                        <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-                        Cerrar Sesión 
-                    </a>
-                </li>
-                </ul>
-            </div>
+        <div class="row row col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div id="barraLateral" class="row" style="display: none; top: 0; bottom: 0;">
+                <div class="col-md-2 sidebar" style="position: fixed; z-index: 10;">
+                    <ul class="nav nav-sidebar navbar-inverse">
+                    <li class="active">
+                        <a href="#" style="font-size: 15px;">
+                            <span class=" glyphicon glyphicon-user" aria-hidden="true"></span>
+                            Perfil 
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" style="font-size: 15px;">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            Médico 
+                        </a>
+                    </li>
+                    <li>
+                        <br><br>
+                    </li>
+                    <li>
+                        <a href="#" style="font-size: 15px;">
+                            <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+                            Iniciar Sesión 
+                        </a>
+                    </li>
+                    <li style="display: none;">
+                        <a href="#" style="font-size: 15px;">
+                            <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+                            Cerrar Sesión 
+                        </a>
+                    </li>
+                    </ul>
+                </div>
+            </div>  
+            <div style="padding-left: 10%; padding-top: 5%;">
+                <table>
+                    <tbody>
+                      <tr>
+                        <td>
+                            <div>
+                                <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
+                                    <img class="img-responsive" src="img/examenes.png" alt="" style="height: 100%; width: 100%;">
+                                </a>
+                            </div>
+                        </td>
+                        <td>
+                            <div>
+                                <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
+                                    <img class="img-responsive" src="img/diario.png" alt="" style="height: 100%; width: 100%;">
+                                </a>
+                            </div>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                            <div>
+                                <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
+                                    <img class="img-responsive" src="img/calendario.jpg" alt="" style="height: 100%; width: 100%;">
+                                </a>
+                            </div>
+                        </td>
+                        <td>
+                            <div>
+                                <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
+                                    <img class="img-responsive" src="img/preguntas.png" alt="" style="height: 100%; width: 100%;">
+                                </a>
+                            </div>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>    
         </div>    
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
