--- a/FUNDAHOG/www/index.html
+++ b/FUNDAHOG/www/index.html
@@ -8,7 +8,7 @@
         <title>FUNDAHOG</title>
     </head>
     <body>
-        <div class="row col-lg-12 col-md-12 col-sm-12 col-xs-12" style="background-color: #cde1ea; padding-left: 5%; padding-top: 2px; color: #ff1c8e; font-weight: normal; font-size: 28px;">
+        <div class="row" style="background-color: #cde1ea; padding-left: 5%; padding-top: 2px; color: #ff1c8e; font-weight: normal; font-size: 28px;">
             <a id="side" onclick="show();"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a>
             <img src="img/manos_icon.png" style="height: 50px; width: 50px;"/>
             FUNDAHOG
@@ -20,9 +20,9 @@
             </div>
             -->
         </div>
-        <div class="row row col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="row">
             <div id="barraLateral" class="row" style="display: none; top: 0; bottom: 0;">
-                <div class="col-md-2 sidebar" style="position: fixed; z-index: 10;">
+                <div class="col-md-3 col-xs-10" style="position: absolute; z-index: 10;">
                     <ul class="nav nav-sidebar navbar-inverse">
                     <li class="active">
                         <a href="#" style="font-size: 15px;">
@@ -61,14 +61,14 @@
                         <td>
                             <div>
                                 <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
-                                    <img class="img-responsive" src="img/examenes.png" alt="" style="height: 100%; width: 100%;">
+                                    <img class="img-responsive" src="img/examenes.png" alt="">
                                 </a>
                             </div>
                         </td>
                         <td>
                             <div>
                                 <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
-                                    <img class="img-responsive" src="img/diario.png" alt="" style="height: 100%; width: 100%;">
+                                    <img class="img-responsive" src="img/diario.png" alt="">
                                 </a>
                             </div>
                         </td>
@@ -77,14 +77,14 @@
                         <td>
                             <div>
                                 <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
-                                    <img class="img-responsive" src="img/calendario.jpg" alt="" style="height: 100%; width: 100%;">
+                                    <img class="img-responsive" src="img/calendario.jpg" alt="" >
                                 </a>
                             </div>
                         </td>
                         <td>
                             <div>
                                 <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
-                                    <img class="img-responsive" src="img/preguntas.png" alt="" style="height: 100%; width: 100%;">
+                                    <img class="img-responsive" src="img/preguntas.png" alt="">
                                 </a>
                             </div>
                         </td>
