--- a/FUNDAHOG/www/index.html
+++ b/FUNDAHOG/www/index.html
@@ -8,52 +8,40 @@
         <title>FUNDAHOG</title>
     </head>
     <body>
-        <div class="row" style="background-color: #cde1ea; padding-left: 5%; padding-top: 2px; color: #ff1c8e; font-weight: normal; font-size: 28px;">
-            <a id="side" onclick="show();"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a>
+        <div class="header">
+            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true" onClick="show();"></span>
             <img src="img/manos_icon.png" style="height: 50px; width: 50px;"/>
             FUNDAHOG
-            
-            <!--<h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-            -->
-        </div>
-        <div class="row">
-            <div id="barraLateral" class="row" style="display: none; top: 0; bottom: 0;">
-                <div class="col-md-3 col-xs-10" style="position: absolute; z-index: 10;">
-                    <ul class="nav nav-sidebar navbar-inverse">
-                    <li class="active">
-                        <a href="#" style="font-size: 15px;">
-                            <span class=" glyphicon glyphicon-user" aria-hidden="true"></span>
-                            Perfil 
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" style="font-size: 15px;">
-                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                            Médico 
-                        </a>
-                    </li>
-                    <li>
-                        <br><br>
-                    </li>
-                    <li>
-                        <a href="#" style="font-size: 15px;">
-                            <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
-                            Iniciar Sesión 
-                        </a>
-                    </li>
-                    <li style="display: none;">
-                        <a href="#" style="font-size: 15px;">
-                            <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-                            Cerrar Sesión 
-                        </a>
-                    </li>
-                    </ul>
-                </div>
-            </div>  
+          </div>
+          <div id="lateral" class="col-sm-3 col-md-2 sidebar" style="display: none">
+            <ul class="nav nav-sidebar">
+              <li class="active">
+                <a href="#">
+                  <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                Perfil
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                Médico
+                </a>
+              </li>
+              <li><br></li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+                Iniciar Sesión
+                </a>
+              </li>
+              <li style="display: none">
+                <a href="#">
+                  <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+                Cerrar Sesión
+                </a>
+              </li>
+            </ul>
+          </div>  
             <div style="padding-left: 10%; padding-top: 5%;">
                 <table>
                     <tbody>
@@ -91,8 +79,7 @@
                       </tr>
                     </tbody>
                   </table>
-            </div>    
-        </div>    
+            </div>        
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
