--- a/FUNDAHOG/www/preguntas.html
+++ b/FUNDAHOG/www/preguntas.html
@@ -42,43 +42,21 @@
               </li>
             </ul>
           </div>  
-            <div style="padding-left: 10%; padding-top: 5%;">
-                <table>
-                    <tbody>
-                      <tr>
-                        <td>
-                            <div>
-                                <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
-                                    <img class="img-responsive" src="img/examenes.png" alt="">
-                                </a>
-                            </div>
-                        </td>
-                        <td>
-                            <div>
-                                <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
-                                    <img class="img-responsive" src="img/diario.png" alt="">
-                                </a>
-                            </div>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>
-                            <div>
-                                <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="#">
-                                    <img class="img-responsive" src="img/calendario.png" alt="" >
-                                </a>
-                            </div>
-                        </td>
-                        <td>
-                            <div>
-                                <a class="col-lg-3 col-md-4 col-xs-10 thumbnail" href="preguntas.html">
-                                    <img class="img-responsive" src="img/pregunta.png" alt="">
-                                </a>
-                            </div>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
+            <div class="col-lg-11 col-md-12 col-sm-12 col-xs-10" style="padding-left: 10%; padding-top: 5%;">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                       <span class="badge" aria-hidden="true">Leer más</span>
+                      Conoces del cáncer?
+                    </li>
+                    <li class="list-group-item">
+                      <span class="badge" aria-hidden="true">Leer más</span>
+                      No te rindas! 10 consejos básicos.
+                    </li>
+                    <li class="list-group-item">
+                      <span class="badge" aria-hidden="true">Leer más</span>
+                      Mantén la paz espiritual
+                    </li>
+              </ul>
             </div>        
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
