--- a/FUNDAHOG/www/preguntas.html
+++ b/FUNDAHOG/www/preguntas.html
@@ -42,21 +42,23 @@
               </li>
             </ul>
           </div>  
-            <div class="col-lg-11 col-md-12 col-sm-12 col-xs-10" style="padding-left: 10%; padding-top: 5%;">
-                <ul class="list-group">
-                    <li class="list-group-item">
-                       <span class="badge" aria-hidden="true">Leer más</span>
-                      Conoces del cáncer?
-                    </li>
-                    <li class="list-group-item">
-                      <span class="badge" aria-hidden="true">Leer más</span>
-                      No te rindas! 10 consejos básicos.
-                    </li>
-                    <li class="list-group-item">
-                      <span class="badge" aria-hidden="true">Leer más</span>
-                      Mantén la paz espiritual
-                    </li>
-              </ul>
+            <div class="list-group">
+                <a href="#" class="list-group-item">
+                  <span class="badge">Leer más</span>
+                  Información
+                </a>
+                <a href="#" class="list-group-item">
+                  <span class="badge">Leer más</span>
+                  Información
+                </a>
+                <a href="#" class="list-group-item">
+                    <span class="badge">Leer más</span>
+                    Información
+                </a>
+                <a href="#" class="list-group-item">
+                    <span class="badge">Leer más</span>
+                    Información
+                </a>
             </div>        
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
